fixed the dark mode and color options

--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,15 @@
 body {
-  /* margin: 0; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(90deg, #fadfdf5c, #f7c9c9 60%, #f8b4b4 90%, #fab27e 100%);
-  /* border: 6px solid;
-  border-image-source: linear-gradient(90deg, #f7c9c9, #fa709a 70%);
-  border-image-slice: 1; */
-  margin-right: 100px;
-  margin-left: 100px;
+  margin: 0;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+#root {
+  height: 100vh;
 }
